# brainfuck-wasm

./: Cargo.toml  README.md  generate.html  generate.js  index.html  script.js  style.css
pkg/: brainfuck_wasm.d.ts  brainfuck_wasm.js  brainfuck_wasm_bg.js  brainfuck_wasm_bg.wasm  brainfuck_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
