[package]
name = "brainfuck-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck-interpreter = { git = "https://github.com/TyomoGit/brainfuck-interpreter-rs.git", version = "0.3.2" }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Document", "Element"] }

[lib]
crate-type = ["cdylib"]
